--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-home></app-home>
+<!--Header-->
+<app-header></app-header>
+
+<!--Page Content-->
+<div class="container-fluid page-content bg-white rounded">
+    <router-outlet></router-outlet>
+</div>
+
+<!--Footer-->
+<app-footer></app-footer>
