--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -1,8 +1,8 @@
 .wrapper {
     text-align: center;
     color: white;
-    display: flex;
-    height: 100vh;
+   // display: flex;
+    height: 45vh;
     flex-direction: column;
     justify-content: center;
     margin: 0px;
