--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,7 +1,7 @@
 footer {
     padding: 10px;
     margin: auto;
-    margin-top: 154px;
+   // margin-top: 154px;
     text-align: center;
     color: #fff;
     background: #464a54;
