--- a/src/app/pages/entry/login/login.component.html
+++ b/src/app/pages/entry/login/login.component.html
@@ -1,1 +1,28 @@
-<p>login works!</p>
+
+     <div class="card">
+        <div class="container" [ngStyle]="{'background-color': formclr}">  
+          <div class="alert" *ngIf="isInValidUser">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+            Invalid username or password.Please try again!
+          </div> 
+          <b><h3> User Login </h3></b> 
+          <form [formGroup]="loginForm" (ngSubmit)="loginUser(loginForm.value)">
+            <label>Username : </label>   
+            <input type="text" placeholder="Enter Username" name="username" required formControlName="username">
+            <div *ngIf="isLoggedin && formControl.username.errors">
+              <div class="error" *ngIf="formControl.username.errors.required">Username is required</div>
+            </div> 
+
+            <label>Password : </label>   
+            <input type="password" placeholder="Enter Password" name="password" required formControlName="password"> 
+            <div *ngIf="isLoggedin && formControl.password.errors">
+              <div class="error" *ngIf="formControl.password.errors.required">Password is required</div>
+            </div>
+
+            <button type="submit" [ngStyle]="{'background-color': btnclr}">Login</button>   
+            <input type="checkbox" checked="checked"> Remember me   
+            <button type="button" class="cancelbtn" (click)="cancel()" [ngStyle]="{'background-color': btnclr}"> Cancel</button>  
+            </form>
+        </div> 
+      </div>  
+ 
