--- a/src/app/pages/entry/sign-up/sign-up.component.html
+++ b/src/app/pages/entry/sign-up/sign-up.component.html
@@ -1,1 +1,40 @@
-<p>sign-up works!</p>
+<div class="card">
+    <div class="container">  
+    <b><h3> User Registration Form </h3></b>
+    <hr>  
+
+ <form [formGroup]="signupForm" (ngSubmit)="register(signupForm.value)">
+  <label> Username </label>   
+  <input type="text" name="username" placeholder= "Username" size="15" required formControlName="username" />  
+  <div *ngIf="isRegisterd && formControl.username.errors">
+    <div class="error" *ngIf="formControl.username.errors.required">Username is required</div>
+  </div>
+
+  <label> Firstname: </label>    
+  <input type="text" name="firstname" placeholder="Firstname" size="15"required formControlName="firstname" /> 
+  <div *ngIf="isRegisterd && formControl.firstname.errors">
+    <div  class="error" *ngIf="formControl.firstname.errors.required">Firstname is required</div>
+  </div>
+
+  <label> Lastname: </label>    
+  <input type="text" name="lastname" placeholder="Lastname" size="15" formControlName="lastname" />   
+    
+  <label for="email"><b>Email</b></label>  
+  <input type="text" placeholder="Enter Email" name="email" required formControlName="email">
+  <div *ngIf="isRegisterd && formControl.email.errors">
+    <div  class="error" *ngIf="formControl.email.errors.required">Username is required</div>
+  </div>  
+    
+  <label for="psw"><b>Password</b></label>  
+  <input type="password" placeholder="Enter Password" name="psw" required formControlName="password"> 
+  <div *ngIf="isRegisterd && formControl.password.errors">
+    <div  class="error" *ngIf="formControl.password.errors.required">Username is required</div>
+  </div> 
+
+  <div class="buttons">
+  <button type="submit" class="registerbtn">Register</button>
+  <button class="registerbtn" class="cancelbtn" (click)="cancel()">Cancel</button>
+  </div>  
+  </form> 
+  </div>
+</div>
