--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -1,64 +1,22 @@
+:host {
+  display: block;
+  border-radius: 2px;
+  background-color: var(--primary-color);
+  color: var(--text-color);
+}
 .wrapper {
-    text-align: center;
-    color: white;
-   // display: flex;
-    height: 45vh;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0px;
-    width: 400px;
-    margin: 0 auto;
-  }
-  
-  .music-list {
-    box-shadow: 20px 20px 0px #222f3e;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  form > input {
-    flex-grow: 1;
-    outline: none;
-    padding-left: 4px;
-    border: 0px;
-    height: 20px;
-  }
-  
-  form > button {
-    border: 0px;
-    background: #10ac84;
-    color: white;
-    outline: none;
-  
-    &:hover {
-      background: #006266;
-    }
-  }
-  
-  ul {
-    list-style: none;
-    background: #632ef5;
-    padding: 10px 0px;
-    margin: 0px;
-  }
-  
-  li {
-    padding-bottom: 4px;
-  }
-  
-  h2 {
-    background: #4319b6;
-    padding: 10px 0px;
-    margin: 0px;
-  }
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
 
-  body {
-    background-color: #576574;
-  }
+@media screen and (min-width: 280px) and (max-width: 823px) {
+ .wrapper {
+   grid-template-columns: auto;
+ }
+}
 
-  .loading {
-    box-shadow: 20px 20px 0px pink !important;
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .wrapper {
+    grid-template-columns: auto auto;
   }
+}
